<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/irkit_activity_vertical_margin"
        android:paddingLeft="@dimen/irkit_activity_horizontal_margin"
        android:paddingRight="@dimen/irkit_activity_horizontal_margin"
        android:paddingTop="56dp">

        <ProgressBar
            android:id="@+id/wifi_connect__progressbar"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="158dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:padding="20dp" />

        <ImageView
            android:id="@+id/wifi_connect__imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/wifi_connect__success_imageview_description"
            android:src="@drawable/success"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wifi_connect__status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/wifi_connect__status" />

        <TextView
            android:id="@+id/wifi_connect__tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/wifi_connect__tips"
            android:textIsSelectable="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/wifi_connect__close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:minWidth="200dp"
            android:text="@string/wifi_connect__close_button"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
