<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/irkit_activity_vertical_margin"
        android:paddingTop="@dimen/irkit_activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/turn_on_irkit__turn_on_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/turn_on_irkit__connect_usb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_powerup3_bg"
            android:orientation="vertical"
            android:tileMode="repeat">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/turn_on_irkit__turn_on_text"
                android:src="@drawable/img_powerup3" />
        </LinearLayout>

        <Button
            android:id="@+id/turnonirkit__next_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/turn_on_irkit__next" />

        <TextView
            android:id="@+id/turnonirkit__purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/turn_on_irkit__buy_irkit"
            android:textIsSelectable="true" />

    </LinearLayout>
</ScrollView>
