<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/irkit_activity_vertical_margin"
        android:paddingLeft="@dimen/irkit_activity_horizontal_margin"
        android:paddingRight="@dimen/irkit_activity_horizontal_margin"
        android:paddingTop="@dimen/irkit_activity_vertical_margin">

        <TextView
            android:id="@+id/wifi__desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:maxWidth="300dp"
            android:text="@string/wifi_input__text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/wifi__ssid_label"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/wifi_input__ssid" />

            <EditText
                android:id="@+id/wifi__ssid_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wifi__ssid_label"
                android:layout_toEndOf="@+id/wifi__ssid_label"
                android:layout_toRightOf="@+id/wifi__ssid_label"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/wifi__security_label"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wifi_input__security" />

            <Spinner
                android:id="@+id/wifi__security_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wifi__security_label"
                android:layout_toEndOf="@+id/wifi__security_label"
                android:layout_toRightOf="@+id/wifi__security_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/wifi__password_label"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/wifi_input__password" />

            <EditText
                android:id="@+id/wifi__password_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wifi__password_label"
                android:layout_toEndOf="@+id/wifi__password_label"
                android:layout_toRightOf="@+id/wifi__password_label"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/wifi__showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wifi__password_field"
                android:layout_alignStart="@+id/wifi__password_field"
                android:layout_below="@+id/wifi__password_field"
                android:text="@string/wifi_input__show_password" />
        </RelativeLayout>

        <Button
            android:id="@+id/wifi__ok_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="20dp"
            android:text="@string/wifi_input__ok" />
    </LinearLayout>
</ScrollView>
