<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingBottom="@dimen/irkit_activity_vertical_margin"
        android:paddingLeft="@dimen/irkit_activity_horizontal_margin"
        android:paddingRight="@dimen/irkit_activity_horizontal_margin"
        android:paddingTop="@dimen/irkit_activity_vertical_margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxWidth="220dp"
            android:text="@string/irkit_password__label" />

        <EditText
            android:id="@+id/irkitpassword_password_field"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/irkitpassword__show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/irkitpassword_password_field"
            android:layout_alignStart="@+id/irkitpassword_password_field"
            android:layout_below="@+id/irkitpassword_password_field"
            android:text="@string/irkit_password__show_password" />

        <Button
            android:id="@+id/irkitpassword_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/irkitpassword__show_password"
            android:layout_marginTop="30dp"
            android:text="@string/irkit_password__ok" />
    </RelativeLayout>
</ScrollView>
