<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/activity_signal__name_label"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/activity_signal__name" />

            <EditText
                android:id="@+id/activity_signal__name_field"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/activity_signal__name_label"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/activity_signal__name_label"
                android:layout_toRightOf="@id/activity_signal__name_label"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/activity_signal__image_label"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="@string/activity_signal__icon" />

            <ImageView
                android:id="@+id/activity_signal__image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/activity_signal__image_label"
                android:layout_toRightOf="@id/activity_signal__image_label"
                android:contentDescription="@string/activity_signal__icon_imageview_description" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/activity_signal__details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- Device ID -->
            <RelativeLayout
                android:id="@+id/activity_signal__device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/activity_signal__device_id_label"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:text="@string/activity_signal__device_id" />

                <TextView
                    android:id="@+id/activity_signal__device_id_value"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/activity_signal__device_id_label"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@id/activity_signal__device_id_label"
                    android:layout_toRightOf="@id/activity_signal__device_id_label"
                    android:textIsSelectable="true" />
            </RelativeLayout>

            <!-- Signal ID -->
            <RelativeLayout
                android:id="@+id/activity_signal__signal_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/activity_signal__signal_id_label"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:text="@string/activity_signal__signal_id" />

                <TextView
                    android:id="@+id/activity_signal__signal_id_value"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/activity_signal__signal_id_label"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@id/activity_signal__signal_id_label"
                    android:layout_toRightOf="@id/activity_signal__signal_id_label"
                    android:textIsSelectable="true" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
